--- a/_config.yml
+++ b/_config.yml
@@ -297,5 +297,5 @@ defaults:
       comments: # true
       share: true
       related: true
-      show_date: true
-      date_format: "%d-%m-%Y"
+      #show_date: true
+      #date_format: "%d-%m-%Y"
