--- a/_config.yml
+++ b/_config.yml
@@ -299,3 +299,10 @@ defaults:
       related: true
       #show_date: true
       #date_format: "%d-%m-%Y"
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
