--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
    - title: "About"
-      url: https://livingstontom.github.io/livingstonmusic/about/
+     url: /about/
    - title: "Sample Posts"
   #   url: /year-archive/
    - title: "Sample Collections"
